--- a/Portfolio Website/style.css
+++ b/Portfolio Website/style.css
@@ -45,8 +45,7 @@ nav a {
 
 /* Banner styles */
 #banner {
-	background-image: url('https://img.freepik.com/free-photo/beautiful-shining-stars-night-sky_181624-622.jpg?w=996&t=st=1683250974~exp=1683251574~hmac=592f02b3861e629ef1b5d54384a7a4e4dfd36d8c9cb2a33499f6e412cc54fbe3');
-	background-size: cover;
+	background-image: url('https://blogs.synopsys.com/from-silicon-to-software/files/2022/03/james-webb-space-telescope-578238551-1200x675-1-1024x576.jpg');
 	background-position: center;
 	height: 500px;
 	display: flex;
